--- a/Prog5_Opdrachten_Week2/Telefoonboek/Telefoonboek.csproj
+++ b/Prog5_Opdrachten_Week2/Telefoonboek/Telefoonboek.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ITelephoneBook.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Telephonebook.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
