--- a/Prog5_Opdrachten_Week3/CurrencyCalculator.Uitwerking/CurrencyCalculator.uitwerking.csproj
+++ b/Prog5_Opdrachten_Week3/CurrencyCalculator.Uitwerking/CurrencyCalculator.uitwerking.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDAD1FAF-680D-4CEB-9318-B6579C33B5DD}</ProjectGuid>
+    <ProjectGuid>{A859ACD7-6700-40BB-8635-E3B9BAC3AFAE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommandingAndBindingDemo</RootNamespace>
-    <AssemblyName>CommandingAndBindingDemo</AssemblyName>
+    <RootNamespace>CurrencyCalculator</RootNamespace>
+    <AssemblyName>CurrencyCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -53,9 +53,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DegreesToAngleConverter.cs" />
-    <Compile Include="SetLowCommand.cs" />
-    <Compile Include="TemperatureVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -64,6 +61,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CurrencyVM.cs" />
+    <Compile Include="EuroToDollarConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -95,12 +94,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="meter.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="rotate.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
