--- a/Prog5_Opdrachten_Week4/MusicCollectionMVVM.uitwerking/MusicCollectionMVVM.uitwerking.csproj
+++ b/Prog5_Opdrachten_Week4/MusicCollectionMVVM.uitwerking/MusicCollectionMVVM.uitwerking.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{10941950-1F7B-41E7-B931-7E2BDBCCE9D4}</ProjectGuid>
+    <ProjectGuid>{5FDACBFC-EB2D-48EC-9659-39E0933C592F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XAMLDemo</RootNamespace>
-    <AssemblyName>XAMLDemo</AssemblyName>
+    <RootNamespace>MusicCollectionMVVM</RootNamespace>
+    <AssemblyName>MusicCollectionMVVM</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -53,6 +53,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DummySongRepository.cs" />
+    <Compile Include="ISongRepository.cs" />
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="Song.cs" />
+    <Compile Include="SongListViewModel.cs" />
+    <Compile Include="SongViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
